# microhttp-freertos-stm32f4

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  CMakePresets.json  STM32F411VETx_FLASH.ld  microhttp-freertos-stm32f4.ioc  stm32f4-arm-toolchain.cmake
Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Inc/drivers/: esp-at.hpp
Core/Inc/firmware/: device.hpp  rtos.hpp  server.hpp  socket.hpp
Core/Src/: dma.c  gpio.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usart.c
Core/Src/drivers/: esp-at.cpp
Core/Src/firmware/: device.cpp  rtos.cpp  server.cpp  socket.cpp
FreeRTOS/: FreeRTOSConfig.h
